# ndstrbot

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.web  PROMPT.md  README.md  create_db.py  create_test_image.py  docker-compose.yml  pyproject.toml  requirements-bot.txt  requirements-web.txt  requirements.txt  run.py  seed_admin.py  test_webapp.py
app/: bot.py
app/handlers/: __init__.py  actions.py  admin.py  cargo.py  common.py  light.py  start.py
app/keyboards/: inline.py  reply.py
app/services/: notifier.py  uploader.py  validators.py
app/states/: cargo.py  light.py
app/utils/: formatters.py  middleware.py
app/webapp/: README.md  main.py  run.py  templates.py
domain/: models.py  schemas.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: DataTable.css  DataTable.jsx  Login.css  Login.jsx  RequestDetail.css  RequestDetail.jsx  StatsCard.css  StatsCard.jsx
frontend/src/services/: api.js
infra/: config.py  db.py  logging.py
tests/: conftest.py  test_uploader.py  test_validators.py
